--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -15807,8 +15807,10 @@ code {
 
 .img-xs {
   width: 35px;
-  height: 35px; }
-
+  height: 35px; 
+  max-width: none;
+}
+  
 .img-ss {
   width: 26px;
   height: 26px; }
